# export-sui-verifier

./: .gitignore  Cargo.toml  README.md  go.work
crates/export_sui_verifier_cli/: Cargo.toml  README.md
crates/export_sui_verifier_cli/src/: main.rs
crates/export_sui_verifier_cli/tests/: generate_cli.rs
crates/export_sui_verifier_core/: Cargo.toml  README.md
crates/export_sui_verifier_core/src/: error.rs  lib.rs  model.rs
crates/export_sui_verifier_core/src/bytes/: endian.rs  hex.rs  mod.rs
crates/export_sui_verifier_core/src/curves/: bls12381.rs  bn254.rs  mod.rs
crates/export_sui_verifier_core/src/formats/: arkworks.rs  gnark.rs  mod.rs  snarkjs_json.rs
crates/export_sui_verifier_core/src/movegen/: context.rs  mod.rs  render.rs
crates/export_sui_verifier_core/src/parser/: arkworks.rs
crates/export_sui_verifier_core/src/snarkjs/: mod.rs  model.rs  parser.rs  validate.rs
crates/export_sui_verifier_core/src/verifier/: local_verify.rs  mod.rs
crates/export_sui_verifier_core/templates/: Move.toml.hbs  tests.move.hbs  verifier.move.hbs
crates/export_sui_verifier_core/tests/: generation_tests.rs
crates/export_sui_verifier_core/tests/fixtures/bls12381/: proof.json  verification_key.json
crates/export_sui_verifier_core/tests/fixtures/bn254/: proof.json  verification_key.json
examples/: README.md
examples/MulCircuit/: Cargo.toml
examples/MulCircuit/artifacts/bls12_381/: proof.json  public.json  verification_key.json
examples/MulCircuit/src/: main.rs
examples/ark-mimc/: Cargo.toml
examples/gnark-native/: go.mod  go.sum
examples/gnark-native/cubic/: README.md  main.go  main_test.go
examples/gnark-native/cubic/artifacts/bls12381/: proof_gnark.json  verification_key_gnark.json
examples/gnark-native/cubic/artifacts/bn254/: proof_gnark.json  public.json  verification_key_gnark.json
examples/gnark-native/internal/artifacts/: artifacts.go
examples/gnark-native/mimc/: README.md  main.go  main_test.go
examples/gnark-native/mimc/artifacts/bls12381/: proof_gnark.json  public.json  verification_key_gnark.json
examples/gnark-native/mimc/artifacts/bn254/: proof_gnark.json  public.json  verification_key_gnark.json
examples/sp1-sui/: README.md
examples/sp1-sui/fibonacci/: .gitignore  Cargo.toml  README.md
examples/sp1-sui/fibonacci/artifacts/: fibonacci_sp1_6.elf  fibonacci_sp1_6_program_vkey.txt
examples/sp1-sui/fibonacci/lib/src/: lib.rs
examples/sp1-sui/fibonacci/program/: Cargo.toml
examples/sp1-sui/fibonacci/program/src/: main.rs
examples/sp1-sui/fibonacci/script/: Cargo.toml
examples/sp1-sui/fibonacci/script/src/: main.rs
examples/sp1-sui/fibonacci/tools/protoc-path/: Cargo.toml
examples/sp1-sui/simple-sum/: .gitignore  Cargo.toml  README.md
examples/sp1-sui/simple-sum/lib/: Cargo.toml
examples/sp1-sui/simple-sum/lib/src/: lib.rs
examples/sp1-sui/simple-sum/program/: Cargo.toml
examples/sp1-sui/simple-sum/program/src/: main.rs
examples/sp1-sui/simple-sum/script/: Cargo.toml
examples/sp1-sui/simple-sum/script/src/: main.rs
examples/sp1-sui/simple-sum/tools/protoc-path/src/: main.rs
