[package]
name = "export-sui-verifier"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/export-sui-verifier"
description = "CLI for exporting Groth16 artifacts to Sui Move verifier packages."
readme = "README.md"
keywords = ["sui", "groth16", "verifier", "cli", "zk"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "export-sui-verifier"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
export_sui_verifier_core = { package = "export-sui-verifier-core", version = "0.2.2", path = "../export_sui_verifier_core" }
regex = "1.12.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"

