[package]
name = "export-sui-verifier-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Load Groth16 artifacts from snarkjs JSON or Arkworks bundles and generate Sui Move verifier packages."
readme = "README.md"
keywords = ["sui", "groth16", "verifier", "zk", "cryptography"]
categories = ["cryptography"]
exclude = ["/tests/**", "/target"]

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num-bigint = { version = "0.4", features = ["serde"] }
hex = "0.4"
handlebars = "5"

ark-std = "0.5"
ark-ff = "0.5"
ark-ec = "0.5"
ark-serialize = "0.5"
ark-bn254 = "0.5"
ark-bls12-381 = "0.5"
ark-groth16 = "0.5"

